Fix launcher for Windows