@@ -1,9 +1,9 @@
 @ECHO OFF
 TITLE BeeSimulation
 
-REM Repast Simphony model run script for Windows systems 
-REM 
-REM Please note that the paths given below use a Linux-like notation. 
+REM Repast Simphony model run script for Windows systems
+REM
+REM Please note that the paths given below use a Linux-like notation.
 
 REM Note the Repast Simphony Directories.
 set REPAST_SIMPHONY_ROOT=../repast.simphony/repast.simphony.runtime_$REPAST_VERSION/
@@ -22,4 +22,5 @@ REM Change to the project directory
 CD "BeeSimulation"
 
 REM Start the Model
-START javaw -XX:+IgnoreUnrecognizedVMOptions --add-modules=ALL-SYSTEM --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED -cp "%CP%" repast.simphony.runtime.RepastMain "./BeeSimulation.rs"
+REM This was modified from default to add compiler flags to support Java 17
+START javaw -XX:+IgnoreUnrecognizedVMOptions --add-modules=ALL-SYSTEM --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED -cp "%CP%" repast.simphony.runtime.RepastMain "./BeeSimulation.rs"
